# info-map

./: .eslintrc.cjs  .prettierignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js
.github/ISSUE_TEMPLATE/: spike.md  suggestion.md  user-story.md
.github/workflows/: client-pipeline.yml  discovery-server-pipeline.yml  gateway-pipeline.yml  map-pipeline.yml  map-service-pipeline.yml  notes-pipeline.yml  notes-service-pipeline.yml
client/: .dockerignore  craco.config.js  dockerfile  index.html  package-lock.json  package.json  proxy.js  sonar-project.properties  tailwind.config.js
diagrams/: components.puml  container.puml  context.puml
discovery-server/: build.gradle  dockerfile
discovery-service/: pom.xml
gateway/: build.gradle  dockerfile
map-service/: .gitignore  build.gradle  dockerfile  pom.xml  settings.gradle
notes-service/: .dockerignore  Cargo.toml  dockerfile
notes-service/migrations/2021-10-07-195051_note/: down.sql  up.sql
notes-service/migrations/2021-12-16-163109_get_notes/: up.sql
notes-service/migrations/2021-12-17-125518_notes/: up.sql
notes-service/src/: api.rs  auth.rs  discovery.rs  errors.rs  extractors.rs  handlers.rs  main.rs  middlewares.rs  models.rs  schema.rs  types.rs
notes-service/src/api/: actions.rs  handlers.rs  routes.rs  types.rs
notes-service/src/extractors/: discovery.rs  pool.rs
notes-service/src/middlewares/: auth.rs
src/: Store.tsx  app.css  app.html  draw.ts  main.tsx  note.ts  utils.ts  vec.ts
src-tauri/: Cargo.toml  tauri.conf.json
(+75 files in other folders)
